# aws_flwr_demo

./: README.md  pyproject.toml
aws_flwr_demo/: __init__.py  client_app.py  server_app.py  task.py
