[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-flwr-demo"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets>=0.5.0",
    "numpy>=2.0.2",
    "boto3==1.38.36",
    "pandas==2.3.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flower"

[tool.flwr.app.components]
serverapp = "aws_flwr_demo.server_app:app"
clientapp = "aws_flwr_demo.client_app:app"

[tool.flwr.app.config]

# AWS configurations
aws-access-key-id = ""
aws-secret-access-key = ""
aws-region = "eu-north-1"
aws-s3-bucket = "aws-flwr-demo"
aws-s3-file = "iris.csv"

# Federated Tranining configurations
num-server-rounds = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
